--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -60,7 +60,7 @@
 </nav>
 <div class="container">
     <!-- Formulario principal -->
-    <form action="search" id="search" method="get">
+    <form action="camel/search" id="search" method="get">
         <div class="row">
             <input class="form-control" id="q" name="q" placeholder="Escribe algo que quieras buscar"
                    type="text"/>
